--- a/gb/19/4/26/n11215833.md
+++ b/gb/19/4/26/n11215833.md
@@ -1,26 +1,25 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ej2940/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ej2940/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ej2940/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ej2940/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ej2940/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ej2940/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ej2940/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ej2940/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ej2940/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ej2940/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ej2940/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>不用出国也好享受 盘点台湾最美饭店</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/04/ea564ee3866aec686780c5f5ad645217-600x400.jpg" />
-<h6>中部地区：莿桐花文创微旅 （业者提供）
-</h6>
+
+<h6></h6>
 <hr>
-<p>【大纪元2019年04月26日讯】（大纪元记者杨子樊<ahref="https://github.com/ej2940/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>台北报导）假期出游，该如何找到最适合的<ahref="https://github.com/ej2940/djy/blob/master/gb/tag/%E9%A5%AD%E5%BA%97.md#1">饭店</a>？除了参考2019年米其林旅馆评鉴外，一项“台湾最美饭店”最新票选结果出炉，也提供民众在订房时的选择依据。</p>
+<p>【大纪元2019年04月26日讯】（大纪元记者杨子樊<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>台北报导）假期出游，该如何找到最适合的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A5%AD%E5%BA%97.md#1">饭店</a>？除了参考2019年米其林旅馆评鉴外，一项“台湾最美饭店”最新票选结果出炉，也提供民众在订房时的选择依据。</p>
 <p>本次票选，强调在地观点为出发，由全台超过43万人次的票数，共有15万名网友响应参与。其中位于嘉义的“承亿文旅桃城茶样子”高票拔得头筹！</p>
-<figure style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/04/640d83228eba8e9516381d9e9fb06920-450x338.jpg" alt="南部地区：嘉义 承亿文旅桃城茶样子。" width="500" b="338" /><figcaption class="wp-caption-text">南部地区：嘉义 承亿文旅桃城茶样子。（业者提供）</figcaption></figure>
-<figure style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/04/1203452d6ec967a3fe837735ba172b0f-450x338.jpg" alt="南部地区：台南晶英酒店。" width="500" b="338" /><figcaption class="wp-caption-text">南部地区：台南晶英酒店。（业者提供）</figcaption></figure>
-<figure style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/04/41ef9e3c4703685a3f7758b62d5405ca-450x338.jpg" alt="东部地区：瑞穗春天国际观光酒店。" width="500" b="338" /><figcaption class="wp-caption-text">东部地区：瑞穗春天国际观光酒店。（业者提供）</figcaption></figure>
-<figure style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/04/63a35304a64acfd0b7b0ee12b7319002-450x338.jpg" alt="花莲理想大地渡假饭店。" width="500" b="338" /><figcaption class="wp-caption-text">花莲理想大地渡假<ahref="https://github.com/ej2940/djy/blob/master/gb/tag/%E9%A5%AD%E5%BA%97.md#1">饭店</a>。（业者提供）</figcaption></figure>
-<figure style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/04/db04f3c92e8c26d989ec38accc9bf31b-450x338.jpg" alt="东部地区：花莲太鲁阁晶英酒店。" width="500" b="338" /><figcaption class="wp-caption-text">东部地区：花莲太鲁阁晶英酒店。（业者提供）</figcaption></figure>
-<figure style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/04/7c236e0639e659cb79ecfa6cb6dec66a-450x338.jpg" alt="东部地区：台东池上 日晖国际渡假村。" width="500" b="338" /><figcaption class="wp-caption-text">东部地区：台东池上 日晖国际渡假村。（业者提供）</figcaption></figure>
-<figure style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/04/ef669e7bdb02ddb3ecb0fa2814983fe7-450x338.jpg" alt="北部地区：福容大饭店（福隆店）。" width="500" b="338" /><figcaption class="wp-caption-text">北部地区：福容大饭店（福隆店）。（业者提供）</figcaption></figure>
-<figure style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/04/fcf6d723e44aa55a9fc6aae82324bc94-450x338.jpg" alt="北部地区：福容大饭店 淡水渔人码头" width="500" b="338" /><figcaption class="wp-caption-text">北部地区：福容大饭店 淡水渔人码头（业者提供）</figcaption></figure>
-<figure style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/04/9d078dceb7ea9c7c4d649ce43099ea3d-450x338.jpg" alt="北部地区：凯达大饭店（台北）" width="500" b="338" /><figcaption class="wp-caption-text">北部地区：凯达大饭店（台北）（业者提供）</figcaption></figure>
-<figure style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/04/4e0813180d2af8d21fecfc85d6677b1d-450x338.jpg" alt="中部离岛地区：澎湖澎澄饭店" width="500" b="338" /><figcaption class="wp-caption-text">中部离岛地区：澎湖澎澄饭店（业者提供）</figcaption></figure>
-<figure style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/04/85cde98bf58ce528a79acfc67af23bb7-450x338.jpg" alt="中部离岛地区：澎湖福朋喜来登酒店" width="500" b="338" /><figcaption class="wp-caption-text">中部离岛地区：澎湖福朋喜来登酒店（业者提供）</figcaption></figure>
-<figure style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/04/cfcb22127ead57f6c07fa58a98e0adba-450x338.jpg" alt="中部地区：溪头米堤大饭店。" width="500" b="338" /><figcaption class="wp-caption-text">中部地区：溪头米堤大饭店。（业者提供）</figcaption></figure>
-<p>由易游网发起的第2届“<ahref="https://github.com/ej2940/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>最美饭店争霸战”今年扩大举办，全台共有100间饭店角逐最美饭店头衔，并采以分区方式进行PK。就总票数来看，东台湾的战况最为激烈，深受民众喜爱。</p>
+<figure style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/04/640d83228eba8e9516381d9e9fb06920-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/04/640d83228eba8e9516381d9e9fb06920-450x338.jpg" alt="南部地区：嘉义 承亿文旅桃城茶样子。" width="500" b="338" /></a><figcaption class="wp-caption-text">南部地区：嘉义 承亿文旅桃城茶样子。（业者提供）</figcaption></figure>
+<figure style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/04/1203452d6ec967a3fe837735ba172b0f-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/04/1203452d6ec967a3fe837735ba172b0f-450x338.jpg" alt="南部地区：台南晶英酒店。" width="500" b="338" /></a><figcaption class="wp-caption-text">南部地区：台南晶英酒店。（业者提供）</figcaption></figure>
+<figure style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/04/41ef9e3c4703685a3f7758b62d5405ca-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/04/41ef9e3c4703685a3f7758b62d5405ca-450x338.jpg" alt="东部地区：瑞穗春天国际观光酒店。" width="500" b="338" /></a><figcaption class="wp-caption-text">东部地区：瑞穗春天国际观光酒店。（业者提供）</figcaption></figure>
+<figure style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/04/63a35304a64acfd0b7b0ee12b7319002-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/04/63a35304a64acfd0b7b0ee12b7319002-450x338.jpg" alt="花莲理想大地渡假饭店。" width="500" b="338" /></a><figcaption class="wp-caption-text">花莲理想大地渡假<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A5%AD%E5%BA%97.md#1">饭店</a>。（业者提供）</figcaption></figure>
+<figure style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/04/db04f3c92e8c26d989ec38accc9bf31b-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/04/db04f3c92e8c26d989ec38accc9bf31b-450x338.jpg" alt="东部地区：花莲太鲁阁晶英酒店。" width="500" b="338" /></a><figcaption class="wp-caption-text">东部地区：花莲太鲁阁晶英酒店。（业者提供）</figcaption></figure>
+<figure style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/04/7c236e0639e659cb79ecfa6cb6dec66a-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/04/7c236e0639e659cb79ecfa6cb6dec66a-450x338.jpg" alt="东部地区：台东池上 日晖国际渡假村。" width="500" b="338" /></a><figcaption class="wp-caption-text">东部地区：台东池上 日晖国际渡假村。（业者提供）</figcaption></figure>
+<figure style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/04/ef669e7bdb02ddb3ecb0fa2814983fe7-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/04/ef669e7bdb02ddb3ecb0fa2814983fe7-450x338.jpg" alt="北部地区：福容大饭店（福隆店）。" width="500" b="338" /></a><figcaption class="wp-caption-text">北部地区：福容大饭店（福隆店）。（业者提供）</figcaption></figure>
+<figure style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/04/fcf6d723e44aa55a9fc6aae82324bc94-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/04/fcf6d723e44aa55a9fc6aae82324bc94-450x338.jpg" alt="北部地区：福容大饭店 淡水渔人码头" width="500" b="338" /></a><figcaption class="wp-caption-text">北部地区：福容大饭店 淡水渔人码头（业者提供）</figcaption></figure>
+<figure style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/04/9d078dceb7ea9c7c4d649ce43099ea3d-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/04/9d078dceb7ea9c7c4d649ce43099ea3d-450x338.jpg" alt="北部地区：凯达大饭店（台北）" width="500" b="338" /></a><figcaption class="wp-caption-text">北部地区：凯达大饭店（台北）（业者提供）</figcaption></figure>
+<figure style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/04/4e0813180d2af8d21fecfc85d6677b1d-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/04/4e0813180d2af8d21fecfc85d6677b1d-450x338.jpg" alt="中部离岛地区：澎湖澎澄饭店" width="500" b="338" /></a><figcaption class="wp-caption-text">中部离岛地区：澎湖澎澄饭店（业者提供）</figcaption></figure>
+<figure style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/04/85cde98bf58ce528a79acfc67af23bb7-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/04/85cde98bf58ce528a79acfc67af23bb7-450x338.jpg" alt="中部离岛地区：澎湖福朋喜来登酒店" width="500" b="338" /></a><figcaption class="wp-caption-text">中部离岛地区：澎湖福朋喜来登酒店（业者提供）</figcaption></figure>
+<figure style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/04/cfcb22127ead57f6c07fa58a98e0adba-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/04/cfcb22127ead57f6c07fa58a98e0adba-450x338.jpg" alt="中部地区：溪头米堤大饭店。" width="500" b="338" /></a><figcaption class="wp-caption-text">中部地区：溪头米堤大饭店。（业者提供）</figcaption></figure>
+<p>由易游网发起的第2届“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>最美饭店争霸战”今年扩大举办，全台共有100间饭店角逐最美饭店头衔，并采以分区方式进行PK。就总票数来看，东台湾的战况最为激烈，深受民众喜爱。</p>
 <h2>☆东部地区</h2>
 <p>东部饭店荣获“台湾最美饭店”优胜的有：座落花东纵谷，可饱览池上绝美景观的“日晖国际渡假村 台东池上”，被网友形容是“没有匠气的美”；今年新开幕的人气话题饭店“瑞穗春天国际观光酒店”，南欧庄园城堡建筑隐身在瑞穗群山中，梦幻幽静的印象也获得网友热烈支持。</p>
 <p>全国唯一在国家公园境内的五星级饭店“花莲太鲁阁晶英酒店”，坐拥山林、尽览山色的绝佳视野，加上服务口碑极佳的住宿体验，让不少网友表示是让人会想一去再去的酒店；以推广在地人文为己任的“THE GAYA HOTEL渡假酒店”，拥有得天独厚的自然景观和原民文化底蕴，相当具有特色；飘散着西班牙南欧风情的“花莲理想大地渡假饭店”，还有运河环绕的独特造景，是花莲具指标性且特色鲜明的饭店之一，深受不少旅人喜爱。</p>
@@ -40,42 +39,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/19/2/7/n11030489.md#1">花语寄情摄影联展名都大饭店展出</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/19/3/6/n11092938.md#1">尚顺君乐饭店婚礼体验日     3/30欢囍登场</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/19/3/15/n11113681.md#1">拼观光 台东饭店组联盟推买一送一</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/19/3/17/n11119409.md#1">饭店总经理细品神韵 赞叹乐舞艺术极美</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/19/3/27/n11143770.md#1">西区新地标饭店 新艋舺吸引外国客</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/19/4/1/n11155503.md#1">美将售台F-16V？外媒：力挺台湾 不在乎北京</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/19/4/1/n11155533.md#1">台湾第一届国际吃书节 或者书店热闹登场</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/19/4/25/n11211632.md#1">台经院：台湾经济呈现“上瘦下肥”</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/19/4/25/n11211882.md#1">中央地方共推离岸风电  台湾抢先机亚洲第一棒</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/19/4/25/n11212628.md#1">美兵推将台湾列主战场 国防部：自己国家自己救</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/2/7/n11030489.md#1">花语寄情摄影联展名都大饭店展出</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/3/6/n11092938.md#1">尚顺君乐饭店婚礼体验日 3/30欢囍登场</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/3/15/n11113681.md#1">拼观光 台东饭店组联盟推买一送一</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/3/17/n11119409.md#1">饭店总经理细品神韵 赞叹乐舞艺术极美</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/3/27/n11143770.md#1">西区新地标饭店 新艋舺吸引外国客</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/4/1/n11155503.md#1">美将售台F-16V？外媒：力挺台湾 不在乎北京</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/4/1/n11155533.md#1">台湾第一届国际吃书节 或者书店热闹登场</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/4/25/n11211632.md#1">台经院：台湾经济呈现“上瘦下肥”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/4/25/n11211882.md#1">中央地方共推离岸风电  台湾抢先机亚洲第一棒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/4/25/n11212628.md#1">美兵推将台湾列主战场 国防部：自己国家自己救</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/16/n11049930.md#1" target="_blank">林辉：被诬施“美人计”一家七口以死抗争</a></li><li><a href="https://github.com/ej2940/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/25/n7931386.md#1" target="_blank">生的希望</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/26/n10932836.md#1" target="_blank">张林：间谍国（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/26/n9771543.md#1" target="_blank">中共抹黑李洪志先生“敛财”真相</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/9/n12017675.md#1">中共内外交困 前人大教授：王沪宁把习吹晕了</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/9/n12017276.md#1">塞尔维亚总统吻五星旗后 儿子确诊患肺炎</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/9/n12018161.md#1">川普问“哪来的” 上海党媒记者称“来自台湾”</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/10/n12018467.md#1">【拍案惊奇】北京连发地震是人为？山东罕见雪</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/9/n12017835.md#1">众艺人呛谭德塞抹黑台湾 炎亚纶：闭上你的嘴</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/9/n12018357.md#1">美国娱乐圈遭重创 一周内九位明星染疫过世</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/8/n12015123.md#1">妻预先考虑后事 汤姆·汉克斯被要求做两件事</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/9/n12015926.md#1">胡瓜长年捐款做公益 不忘赞助辛龙女儿学费</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/9/n12016763.md#1">李明依罹甲状腺癌 动刀切除恶性肿瘤</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/8/n12014647.md#1">两次抗癌成功 美老牌歌星普莱染中共肺炎身亡</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/8/n12012857.md#1">口罩戴久耳朵痛？ 加拿大男童的护耳器有解</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/3/13/n11938424.md#1">强大善能量 猛兽蝗虫神奇证验</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/8/n12014127.md#1">工匠未见过佛 如何能雕刻出佛之庄严宝像</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/6/n12007048.md#1">未来的人们都将在善恶间抉择——1950年宋美龄《在纽约向全美广播演说》</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/7/n12011418.md#1">【历史上的瘟疫】夺走两位君王性命的大瘟疫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ej2940/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ej2940/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/4/26/n11215833.htm">不用出国也好享受 盘点台湾最美饭店</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/4/26/n11215833.htm">不用出国也好享受 盘点台湾最美饭店</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ej2940/djy/blob/master/gb/19/4/26/n11215833.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ej2940/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ej2940/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ej2940/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/4/26/n11215833.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
